--- a/voxist-app-version.json
+++ b/voxist-app-version.json
@@ -1,8 +1,1 @@
-{
-    "major" : "1",
-    "minor" : "1",
-    "patch" : "0",
-    "build" : "1266",
-    "version" : "1.1.0",
-    "full" : "1.1.0.1266"
-}
+{"major":1,"minor":1,"patch":0,"build":1276}
